# ansible-role-tmux

./: .travis.yml  README.md  dependencies.yml  install.sh  molecule.yml  playbook.yml  pyproject.toml  requirements.txt  requirements.yml
.github/workflows/: install.yml  main.yml  molecule.yml  release.yml
defaults/: main.yml
docker/: arch.dockerfile
install/: playbook.yml
meta/: main.yml
molecule/default/: converge.yml  molecule.yml  playbook.yml  requirements.yml  verify.yml
molecule/default/tests/: test_default.py
tasks/: main.yml
templates/: tmux.conf
tests/: test_command.py
vars/: Antergos.yml  Archlinux.yml
